# dotnetutils

./: .gitignore  LICENSE  README.md  TODO.txt  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
docs/: api.md  conf.py  index.rst
docs/api/: dotnetutils.net_cil_disas.html  dotnetutils.net_deobfuscate_funcs.rst  dotnetutils.net_emu_types.rst  dotnetutils.net_metadata.rst  dotnetutils.net_patch.html  dotnetutils.net_processing.rst  dotnetutils.net_row_objects.rst  dotnetutils.net_sigs.html  dotnetutils.net_sigs.rst  dotnetutils.net_structs.rst  dotnetutils.net_table_objects.html  dotnetutils.net_tokens.html  modules.html
dotnetutils/: __init__.py  base.pxd  base.pyx  dotnetpefile.pxd  dotnetpefile.pyx  graph_fixed.txt  graph_nonmin.txt  net_cil_disas.pxd  net_cil_disas.pyx  net_deobfuscate.py  net_deobfuscate_funcs.pxd  net_deobfuscate_funcs.pyx  net_emu_coretypes.pyx  net_emu_structs.pxd  net_emu_structs.pyx  net_emu_types.pxd  net_emu_types.pxi  net_emu_types.pyx  net_emulator.pxd  net_emulator.pyx  net_exceptions.py  net_graph_analyzer.py  net_graphing.py  net_metadata.pxd  net_metadata.pyx  net_opcodes.pxd  net_opcodes.pyx  net_patch.pxd  net_patch.py  net_patch.pyx  net_processing.pxd  net_processing.pyx  net_rebuilder.pxd  net_rebuilder.pyx  net_row_objects.pxd  net_row_objects.pyx  net_sigs.pxd  net_sigs.pyx  net_structs.pxd  net_structs.pyx  (+6 more)
examples/: junk_fields_out.txt  net_deobfuscate.py  out.txt  test_cex_compressed.py  testing_cex.py  testing_consoleapp1.py  testing_emulatortesting.py  testing_patching.py
(+45 files in other folders)
