[project]
name = "dotnetutils"
version = "1.0.0"
description = "A package for deconstructing and analyzing dotnet files."
authors = [
    { name = "Aaron Gdanski", email = "aaron.gdanski@ibm.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pefile>=2024.8.26",
    "numpy<2",
    "Cython>=3.0.11",
    "pycryptodome>=3.21.0"
]

[build-system]
requires = ["setuptools", "cython", "wheel", "numpy", "cysignals"]
build-backend = "setuptools.build_meta"
