[project]
name = "dotnetutils"
version = "2.0.0"
description = "A package for deconstructing and analyzing dotnet files."
authors = [
    { name = "Aaron Gdanski", email = "aaron.gdanski@ibm.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "Cython>=3.0.11",
    "pycryptodome>=3.21.0",
    "pefile"
]

[build-system]
requires = ["setuptools", "cython", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=["dotnetutils", "dotnetutils.deobfuscators"]
